deploy/030-schema-registry.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: schema-reg
  name: schema-reg
spec:
  ports:
  - name: schema-registry
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: schema-reg
  sessionAffinity: None
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: schema-reg
  name: schema-reg
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: schema-reg
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: schema-reg
    spec:
      containers:
      - env:
        - name: SCHEMA_REGISTRY_HOST_NAME
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: status.podIP
        - name: SCHEMA_REGISTRY_LISTENERS
          value: http://0.0.0.0:8081
        - name: SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS
          value: PLAINTEXT://ks-kafka-headless:9092
        - name: SCHEMA_REGISTRY_KAFKASTORE_GROUP_ID
          value: ks-kafka-schema-reg
        - name: SCHEMA_REGISTRY_MASTER_ELIGIBILITY
          value: "true"
        - name: SCHEMA_REGISTRY_HEAP_OPTS
          value: -Xms512M -Xmx512M
        - name: SCHEMA_REGISTRY_CONFLUENT_SUPPORT_METRICS_ENABLE
          value: "false"
        - name: SCHEMA_REGISTRY_ACCESS_CONTROL_ALLOW_METHODS
          value: GET,POST,PUT,OPTIONS
        - name: SCHEMA_REGISTRY_ACCESS_CONTROL_ALLOW_ORIGIN
          value: "*"
        - name: SCHEMA_REGISTRY_AVRO_COMPATIBILITY_LEVEL
          value: FULL
        image: confluentinc/cp-schema-registry:5.5.0
        imagePullPolicy: IfNotPresent
        name: schema-reg
        ports:
        - containerPort: 8081
          name: schema-registry
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
