deploy/040-connect.yaml

apiVersion: v1
kind: Service
metadata:
  labels:
    app: ks-connect
  name: ks-connect
spec:
  ports:
  - name: ks-connect
    port: 8083
    protocol: TCP
    targetPort: 8083
  selector:
    app: ks-connect
  sessionAffinity: None
  type: ClusterIP
    
---
apiVersion: apps/v1
kind: Deployment
metadata:
  generation: 2
  labels:
    app: ks-connect
  name: ks-connect
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ks-connect
  template:
    metadata:
      labels:
        app: ks-connect
    spec:
      containers:
      - env:
        - name: CONNECT_REST_ADVERTISED_HOST_NAME
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: status.podIP
        - name: CONNECT_BOOTSTRAP_SERVERS
          value: PLAINTEXT://ks-kafka-headless:9092
        - name: CONNECT_GROUP_ID
          value: kafka
        - name: CONNECT_CONFIG_STORAGE_TOPIC
          value: connect-config
        - name: CONNECT_OFFSET_STORAGE_TOPIC
          value: connect-offset
        - name: CONNECT_STATUS_STORAGE_TOPIC
          value: connect-status
        - name: CONNECT_KEY_CONVERTER_SCHEMA_REGISTRY_URL
          value: http://schema-reg:8081
        - name: CONNECT_VALUE_CONVERTER_SCHEMA_REGISTRY_URL
          value: http://schema-reg:8081
        - name: KAFKA_HEAP_OPTS
          value: -Xms512M -Xmx512M
        - name: CONNECT_CONFIG_STORAGE_REPLICATION_FACTOR
          value: "3"
        - name: CONNECT_INTERNAL_KEY_CONVERTER
          value: org.apache.kafka.connect.json.JsonConverter
        - name: CONNECT_INTERNAL_VALUE_CONVERTER
          value: org.apache.kafka.connect.json.JsonConverter
        - name: CONNECT_KEY_CONVERTER
          value: io.confluent.connect.avro.AvroConverter
        - name: CONNECT_KEY_CONVERTER_SCHEMAS_ENABLE
          value: "false"
        - name: CONNECT_OFFSET_STORAGE_REPLICATION_FACTOR
          value: "3"
        - name: CONNECT_PLUGIN_PATH
          value: /usr/share/java,/usr/share/confluent-hub-components
        - name: CONNECT_STATUS_STORAGE_REPLICATION_FACTOR
          value: "3"
        - name: CONNECT_VALUE_CONVERTER
          value: io.confluent.connect.avro.AvroConverter
        - name: CONNECT_VALUE_CONVERTER_SCHEMAS_ENABLE
          value: "false"
        - name: CONNECT_REGISTRY_CONFLUENT_SUPPORT_METRICS_ENABLE
          value: "false"
        image: confluentinc/cp-kafka-connect:5.5.0
        imagePullPolicy: IfNotPresent
        name: ks-connect
        ports:
        - containerPort: 8083
          name: kafka-connect
          protocol: TCP
        resources:
          requests:
            cpu: 500m
            memory: 1Gi
          limits:
            cpu: 2
            memory: 4Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
