deploy/050-ksqldb.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ks-ksqldb
  name: ks-ksqldb
spec:
  ports:
  - name: server
    port: 8088
    protocol: TCP
    targetPort: 8088
  selector:
    app: ks-ksqldb
  sessionAffinity: None
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  generation: 1
  labels:
    app: ks-ksqldb
  name: ks-ksqldb
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ks-ksqldb
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ks-ksqldb
    spec:
      containers:
      - env:
        - name: KSQL_BOOTSTRAP_SERVERS
          value: PLAINTEXT://ks-kafka-headless:9092
        - name: KSQL_KSQL_STREAMS_BOOTSTRAP_SERVERS
          value: PLAINTEXT://ks-kafka-headless:9092
        - name: KSQL_KSQL_LOGGING_PROCESSING_STREAM_AUTO_CREATE
          value: "true"
        - name: KSQL_KSQL_LOGGING_PROCESSING_TOPIC_AUTO_CREATE
          value: "true"
        - name: KSQL_KSQL_SCHEMA_REGISTRY_URL
          value: http://schema-reg:8081
        - name: KSQL_KSQL_CONNECT_URL
          value: http://ks-connect:8083
        - name: KSQL_LISTENERS
          value: http://0.0.0.0:8088
        - name: KSQL_CONFLUENT_SUPPORT_METRICS_ENABLE
          value: "false"
        image: confluentinc/ksqldb-server:0.9.0
        imagePullPolicy: IfNotPresent
        name: ks-ksqldb
        ports:
        - containerPort: 8088
          name: server
          protocol: TCP
        resources:
          requests:
            cpu: 250m
            memory: 100Mi
          limits:
            memory: 4Gi
            cpu: 4
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
