deploy/10-zookeeper.yaml
apiVersion: v1
kind: Service
metadata:
  name: zk-headless
spec:
  ports:
  - port: 2888
    name: peer
  - port: 3888
    name: leader-election
  - port: 2181
    name: client
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: zookeeper

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zk
spec:
  selector:
    matchLabels:
      app: zookeeper
  serviceName: "zk-headless"
  replicas: 3
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: Parallel
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: zk
        image: confluentinc/cp-zookeeper:5.5.0
        command:
        - bash
        - -c
        - |-
          ZK_FIX_HOST_REGEX="s/${HOSTNAME}\.[^:]*:/0.0.0.0:/g"
          ZOOKEEPER_SERVER_ID=$((${HOSTNAME##*-}+1)) \
          ZOOKEEPER_SERVERS=`echo $ZOOKEEPER_SERVERS | sed -e "$ZK_FIX_HOST_REGEX"` \
          /etc/confluent/docker/run
        lifecycle:
          preStop:
            exec: 
             command: ["sh", "-ce", "kill -s TERM 1; while $(kill -0 1 2>/dev/null); do sleep 1; done"]
        ports:
        - containerPort: 2181
          name: client
        - containerPort: 2888
          name: peer
        - containerPort: 3888
          name: leader-election
        resources:
          requests:
            cpu: 500m
            memory: 256Mi
          limits:
            cpu: "1"
            memory: 1Gi
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - '[ "imok" = "$(echo ruok | nc -w 1 -q 1 127.0.0.1 2181)" ]'
        volumeMounts:
        - name: config
          mountPath: /etc/kafka
        - name: data
          mountPath: /var/lib/zookeeper
      #NOTE the empty volumes below!
      #YOUR DATA WILL NOT SURVIVE REDEPLOYS!
      # link your own PVCs if you wish
      volumes:
      - name: config
        emptyDir: {}
      - name: data
        emptyDir: {}
