deploy/035-schema-registry-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: schema-reg-extern
  labels:
    app: schema-reg
spec:
  rules:
      #NOTE use your own uri! 
    - host: schema-reg.your-domain.local
      http:
        paths:
          - path: /
            backend:
              serviceName: schema-reg
              servicePort: 8081
